--- a/style.css
+++ b/style.css
@@ -1,97 +1,261 @@
+/* CSS global */
+
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
   text-decoration: none;
   list-style-type: none;
 }
 
-header {
-  height: 100vh;
-  width: 100vw;
-  background-image: url(p1-image/Opel-Kadett-C-Caravan-Tracktool-Umbau-Tuning-Restomod-1.jpg);
-  background-size: cover;
+body {
+  font-family: "Poppins", sans-serif;
 }
 
-.navbar {
-  position: absolute;
-  padding: 50px;
+/*menu burger */
+
+.container {
+  display: inline-block;
+  cursor: pointer;
+}
+
+.bar1,
+.bar2,
+.bar3 {
+  width: 35px;
+  height: 5px;
+  background-color: white;
+  margin: 6px 0;
+  transition: 0.4s;
+}
+
+.change .bar1 {
+  transform: translate(0, 11px) rotate(-45deg);
+}
+
+.change .bar2 {
+  opacity: 0;
+}
+
+.change .bar3 {
+  transform: translate(0, -11px) rotate(45deg);
+}
+
+/* first page */
+
+header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: 100%;
-  box-sizing: border-box;
+  transition: 0.6s;
+  padding: 40px 30px;
+  z-index: 10;
 }
 
-.navbar a {
-  color: aliceblue;
+header.sticky {
+  padding: 40px 30px;
+  background: white;
 }
 
-.navbar .logo {
+header .logo {
+  position: relative;
+  font-weight: 700;
+  color: white;
   font-size: 2em;
-  font-weight: bold;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  transition: 0.6s;
 }
 
-.navbar .nav-links ul {
-  display: flex;
-}
-
-.navbar .nav-links ul li {
-  margin: 0 25px;
-}
-
-.navbar .nav-links ul li.active a {
-  color: rgb(255, 136, 0);
-  font-weight: 600;
-}
-
-.navbar .menu-hamburger {
-  display: none;
-  position: absolute;
-  top: 50px;
-  right: 50px;
+header .menu-hamburger {
   width: 35px;
+  z-index: 20;
 }
 
-@media screen and (max-width: 900px) {
-  .navbar {
-    padding: 0;
-  }
+.nav-links {
+  top: 0;
+  left: 0;
+  position: absolute;
+  background-color: rgba(128, 110, 110, 0.3);
+  backdrop-filter: blur(7px);
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left: -100%;
+  transition: 0.5s ease;
+}
 
-  .navbar .logo {
-    position: absolute;
-    top: 50px;
-    left: 50px;
-  }
-  .navbar .menu-hamburger {
-    display: block;
-  }
+.nav-links.mobile-menu {
+  margin-left: 0;
+}
 
-  .nav-links {
-    top: 0;
-    left: 0;
-    position: absolute;
-    background-color: rgba(128, 110, 110, 0.3);
-    backdrop-filter: blur(7px);
-    width: 100%;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-left: -100%;
-    transition: 0.5s ease;
-  }
+.nav-links ul {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 
-  .nav-links.mobile-menu {
-    margin-left: 0;
-  }
+header ul li {
+  margin: 25px 0;
+}
 
-  .nav-links ul {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-  .navbar .nav-links ul li {
-    margin: 25px 0;
-    font-size: 2em;
-  }
+header ul li a {
+  color: white;
+  letter-spacing: 2px;
+  font-size: 2em;
+}
+
+.banner {
+  position: relative;
+  width: 100%;
+  height: 100vh;
+  background: url(p1-image/Opel-Kadett-C-Caravan-Tracktool-Umbau-Tuning-Restomod-1.jpg);
+  background-size: cover;
+}
+
+header.sticky .logo {
+  color: black;
+}
+
+.burgerBlack {
+  background-color: black;
+}
+/* about */
+
+.about {
+  height: 100vh;
+  width: 100%;
+  background-image: url(p1-image/drift-mobile.jpg);
+  background-size: cover;
+  background-position: center;
+}
+
+.about p {
+  color: white;
+  font-size: 1.3em;
+  padding: 130px 50px;
+}
+
+/* form */
+
+.contact {
+  height: 85vh;
+  width: 100vw;
+  background-color: grey;
+}
+.contact-form {
+  height: 100%;
+  padding: 120px 30px 0 30px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+}
+
+.contact-form h2 {
+  padding-bottom: 2em;
+  font-size: 2em;
+}
+
+.contact-text {
+  padding: 0.5em 1em;
+  width: 100%;
+  outline: none;
+  border: 2px solid rgba(0, 0, 0, 0);
+  border-radius: 15px;
+  background-color: rgba(230, 230, 230, 0.6);
+  font-size: 1.1em;
+  margin-bottom: 1em;
+  transform: 0.3s;
+}
+
+.contact-text:hover {
+  background-color: rgba(202, 171, 132, 0.708);
+}
+
+.contact-text {
+  background-color: white;
+  border: 2px solid rgba(255, 136, 0, 0.46);
+}
+
+.area {
+  min-height: 150px;
+}
+
+.btn {
+  margin-top: 1.5em;
+  width: 100px;
+  font-size: 1.1em;
+  cursor: pointer;
+  border-radius: 15px;
+  background-color: white;
+  border: 2px solid rgba(255, 136, 0, 0.46);
+}
+
+/* second page */
+
+.second-page,
+.third-page {
+  background-color: black;
+}
+
+.first-preparation,
+.second-preparation,
+.first-entretien,
+.second-entretien {
+  height: 100vh;
+  width: 100%;
+}
+
+.third-preparation,
+.third-entretien {
+  height: 85vh;
+  width: 100%;
+}
+
+.card {
+  height: 100%;
+  width: 100%;
+  padding: 9em 20px 20px 20px;
+}
+
+.card img {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+  object-position: 50%;
+}
+
+/* footer */
+
+footer {
+  height: 15vh;
+  width: 100%;
+  background-color: rgb(255, 136, 0);
+  display: flex;
+  flex-direction: column;
+}
+
+.social-media {
+  height: 100%;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  margin-top: 30px;
+}
+footer .icon {
+  width: 45px;
+  height: auto;
+}
+
+.copyright {
+  font-size: 0.5em;
+  text-align: center;
+  margin-bottom: 20px;
 }
