--- a/style.css
+++ b/style.css
@@ -12,36 +12,7 @@ body {
   font-family: "Poppins", sans-serif;
 }
 
-/*menu burger */
-
-.container {
-  display: inline-block;
-  cursor: pointer;
-}
-
-.bar1,
-.bar2,
-.bar3 {
-  width: 35px;
-  height: 5px;
-  background-color: white;
-  margin: 6px 0;
-  transition: 0.4s;
-}
-
-.change .bar1 {
-  transform: translate(0, 11px) rotate(-45deg);
-}
-
-.change .bar2 {
-  opacity: 0;
-}
-
-.change .bar3 {
-  transform: translate(0, -11px) rotate(45deg);
-}
-
-/* first page */
+/* Navbar */
 
 header {
   position: fixed;
@@ -57,7 +28,6 @@ header {
 }
 
 header.sticky {
-  padding: 40px 30px;
   background: white;
 }
 
@@ -111,6 +81,41 @@ header ul li a {
   font-size: 2em;
 }
 
+header ul li a:hover {
+  color: rgb(255, 136, 0);
+}
+
+/*menu burger */
+
+.container {
+  display: inline-block;
+  cursor: pointer;
+}
+
+.bar1,
+.bar2,
+.bar3 {
+  width: 35px;
+  height: 5px;
+  background-color: white;
+  margin: 6px 0;
+  transition: 0.4s;
+}
+
+.change .bar1 {
+  transform: translate(0, 11px) rotate(-45deg);
+}
+
+.change .bar2 {
+  opacity: 0;
+}
+
+.change .bar3 {
+  transform: translate(0, -11px) rotate(45deg);
+}
+
+/* first page */
+
 .banner {
   position: relative;
   width: 100%;
@@ -146,7 +151,7 @@ header.sticky .logo {
 
 .contact {
   height: 85vh;
-  width: 100vw;
+  width: 100%;
   background-color: grey;
 }
 .contact-form {
@@ -258,4 +263,84 @@ footer .icon {
   font-size: 0.5em;
   text-align: center;
   margin-bottom: 20px;
+}
+
+@media screen and (min-width: 700px) {
+  /* Navbar */
+  .main-header {
+    background-color: unset;
+  }
+
+  header,
+  header.sticky {
+    background-color: black;
+  }
+
+  header.sticky .logo {
+    color: white;
+  }
+
+  .menu-hamburger {
+    display: none;
+  }
+
+  .nav-links {
+    position: relative;
+    background-color: unset;
+    backdrop-filter: none;
+    width: 100%;
+    height: auto;
+    justify-content: flex-end;
+    margin-left: 0;
+    transition: none;
+  }
+
+  .nav-links ul {
+    flex-direction: row;
+    align-items: center;
+  }
+
+  .nav-links ul li {
+    padding-left: 20px;
+    font-size: 0.8em;
+  }
+
+  /* first page */
+
+  .about p {
+    padding: 180px 50px;
+  }
+
+  /* second page */
+
+  .second-page {
+    display: flex;
+    height: 85vh;
+  }
+
+  .first-preparation,
+  .second-preparation {
+    height: 85vh;
+  }
+
+  .first-preparation .card,
+  .second-preparation .card {
+    padding-right: 0;
+  }
+  /* third page */
+
+  .third-page {
+    display: flex;
+    height: 85vh;
+  }
+
+  .first-entretien,
+  .second-entretien {
+    height: 85vh;
+  }
+
+  .first-entretien .card,
+  .second-entretien .card {
+    padding-right: 0;
+  }
 }
