--- a/style.css
+++ b/style.css
@@ -36,8 +36,8 @@ header .logo {
   position: relative;
   font-weight: 700;
   color: white;
+  text-shadow: 4px 3px black;
   font-size: 2em;
-  text-transform: uppercase;
   letter-spacing: 2px;
   transition: 0.6s;
 }
@@ -80,12 +80,18 @@ header ul li a {
   color: white;
   letter-spacing: 2px;
   font-size: 2em;
+  text-shadow: 2px 2px black;
 }
 
 header ul li a:hover {
   color: var(--main-color);
+  transition: 0.3s ease-in;
 }
 
+.active a {
+  color: var(--main-color);
+  border-bottom: 3px solid var(--main-color);
+}
 /*menu burger */
 
 .container {
@@ -128,6 +134,7 @@ header ul li a:hover {
 
 header.sticky .logo {
   color: black;
+  text-shadow: none;
 }
 
 .burgerBlack {
@@ -145,8 +152,9 @@ header.sticky .logo {
 
 .about p {
   color: white;
+  text-shadow: 2px 2px black;
   font-size: 1.3em;
-  padding: 130px 50px;
+  padding: 140px 25px;
 }
 
 /* form */
@@ -230,6 +238,7 @@ header.sticky .logo {
   height: 100%;
   width: 100%;
   padding: 9em 20px 20px 20px;
+  position: relative;
 }
 
 .card img {
@@ -239,6 +248,17 @@ header.sticky .logo {
   object-position: 50%;
 }
 
+.card .text-over {
+  color: white;
+  font-size: 1.2em;
+  text-shadow: 2px 2px black;
+  backdrop-filter: blur(4px);
+  position: absolute;
+  width: 80%;
+  left: 50%;
+  top: 35%;
+  transform: translate(-50%, -50%);
+}
 /* footer */
 
 footer {
