--- a/style.css
+++ b/style.css
@@ -182,6 +182,7 @@ header.sticky .logo {
 .contact-form h2 {
   padding-bottom: 1.4em;
   font-size: 2em;
+  text-decoration: underline;
 }
 
 .contact-text {
